syntax = "proto3";

package FastQueueService;

service FastQueueService {
  rpc CreateTopic (CreateTopicRequest) returns (CreateTopicReply) {}
  rpc DeleteTopic (DeleteTopicRequest) returns (DeleteTopicReply) {}
  rpc CreateSubscription (CreateSubscriptionRequest) returns (CreateSubscriptionReply) {}
  rpc DeleteSubscription (DeleteSubscriptionRequest) returns (DeleteSubscriptionReply) {}
  rpc Publish (stream WriteRequest) returns (stream PublisherAck) {}
  rpc PublishMany (stream WriteManyRequest) returns (stream PublisherAck) {}
  rpc Subscribe (stream CompleteRequest) returns (stream Messages) {}
}

message CreateTopicRequest {
  string Name = 1;
}

message CreateTopicReply {
}

message DeleteTopicRequest {
  string Name = 1;
  bool DeleteSubscriptions = 2;
}

message DeleteTopicReply {
}

message CreateSubscriptionRequest {
  string TopicName = 1;
  string SubscriptionName = 2;
}

message CreateSubscriptionReply {
}

message DeleteSubscriptionRequest {
  string TopicName = 1;
  string SubscriptionName = 2;
}

message DeleteSubscriptionReply {
}

message WriteRequest {
  int64 SequenceNumber = 1;
  bytes Message = 2;
  PublisherOptions Options = 3;
}

message WriteManyRequest {
  int64 SequenceNumber = 1;
  repeated bytes Messages = 2;
  PublisherOptions Options = 3;
}

message PublisherOptions {
    string TopicName = 1;
    int32 ConfirmationIntervalMilliseconds = 2;
    bool AckHandlerIsNull = 3;
}

message PublisherAck {
  int64 SequenceNumber = 1;
}

message Message {
  int64 Id = 1;
  int64 Timestamp = 2;
  bytes Body = 3;
}

message Messages
{
    repeated Message Messages = 1;
}

message CompleteRequest {
  int64 Id = 1;
  SubscriberOptions Options = 2;
}

message SubscriberOptions {
  string TopicName = 1;
  string SubscriptionName = 2;
  int32 MaxMessagesInBatch = 3;
  int32 PushIntervalMilliseconds = 4;
}



